tests-integration/tests/custom/error-02/stderr.expected
Error:
    model.eprime:2:17:
  |
2 | such that x = y =
  |                 ^
Missing Expression

model.eprime:2:17:
  |
2 | such that x = y =
  |                 ^
Missing ,

model.eprime:3:1:
  |
3 | such that z = 3
  | ^
Missing Expression


